<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
android:layout_height="match_parent">

    <Button
        android:text="@string/Continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:visibility="visible"
        tools:text="@string/Continue"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="55sp"
        android:layout_below="@+id/imageView"
        android:id="@+id/textView"
        tools:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:text="@string/Δημήτρης_Νικολαΐδης"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:id="@+id/textView3"
        tools:text="@string/Δημήτρης_Νικολαΐδης"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/Τιλσίζογλου_Αναστάσιος"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:id="@+id/textView5"
        tools:text="@string/Τιλσίζογλου_Αναστάσιος"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/TransCoders_Organization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:textSize="20sp"
        android:id="@+id/textView6"
        tools:text="@string/TransCoders_Organization"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <TextView
        android:text="@string/Αλέξανδρος_Χατζής"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:id="@+id/textView4"
        tools:text="@string/Αλέξανδρος_Χατζής"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/Μαγδαληνή_Κόιου"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:id="@+id/textView7"
        tools:text="@string/Μαγδαληνή_Κόιου"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/Λευτέρης_Λαμπίδης"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:id="@+id/textView8"
        tools:text="@string/Λευτέρης_Λαμπίδης"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:contentDescription="@string/description"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@mipmap/ic_launcher"/>
</RelativeLayout>